Laptop layout bug fixes

--- a/src/pages/AboutMe/AboutMe.css
+++ b/src/pages/AboutMe/AboutMe.css
@@ -58,7 +58,7 @@
 }
 
 
-@media (min-width:1366px) and (max-width: 1440px) {
+@media (min-width:1360px) and (max-width: 1440px) {
 
     .aboutme-title {
 
