--- a/src/pages/Design/Design.css
+++ b/src/pages/Design/Design.css
@@ -1,6 +1,6 @@
 .design-container {
 
-    margin-top: 300px;
+    margin-top: 200px;
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto;
@@ -11,10 +11,16 @@
     grid-gap: 40px;
 }
 
+.design-container div {
+
+    margin: auto;
+}
 .photo1-design {
 
-    width: 559px;
-    height: 844px;
+    position: relative;
+    left: 100px;
+    width: 359px;
+    height: 644px;
     grid-area: photo1;
     background-image: url('../../assets/images/diseño/bilboard.png');
     background-size: cover;
@@ -35,8 +41,11 @@
 
 .photo2-design {
 
-    width: 559px;
-    height: 844px;
+
+    position: relative;
+    left: -100px;
+    width: 359px;
+    height: 644px;
     grid-area: photo2;
     background-image: url('../../assets/images/diseño/wiskas.png');
     background-size: cover;
@@ -58,8 +67,8 @@
 
 .photo3-design {
 
-    width: 1107px;
-    height: 852px;
+    width: 707px;
+    height: 552px;
     grid-area: photo3;
     margin-bottom: 20px;
     box-shadow: 22px 21px 42px 13px lightgray;
@@ -87,23 +96,23 @@
 
 .photo3-design img {
 
-    width: 500px;
-    height: 650px;
+    width: 400px;
+    height: 550px;
     
 }
 
 .photo3-design img ~ img {
 
-    width: 300px;
-    height: 344px;
+    width: 200px;
+    height: 244px;
     
 }
 
 
 .photo4-design {
 
-    width: 1107px;
-    height: 852px;
+    width: 707px;
+    height: 552px;
     grid-area: photo4;
     background-image: url('../../assets/images/diseño/elglobo.png');
     background-size: cover;
