--- a/src/pages/DesignBillboard/DesignBillboard.css
+++ b/src/pages/DesignBillboard/DesignBillboard.css
@@ -123,3 +123,43 @@
         font-size: 10px;
     }
 }
+
+@media (min-width:1360px) and (max-width:1440px) {
+
+    .billboard-container {
+
+        margin-top: 100px;
+        grid-gap: 40px;
+    
+    }
+    
+    .photo1-billboard {
+    
+        width: 116px;
+        height: 221px;
+        background-position: center;
+        border-radius: 30px;
+        position: relative;
+        left: 350px;
+    
+    }
+    
+    .photo2-billboard {
+    
+        width: 256px;
+        height: 433px;
+        background-position: center;
+        border-radius: 30px;
+
+    
+    }
+    
+    .description-billboard {
+
+        font-size: 14px;
+        position: relative;
+        top: -200px;
+
+    }
+    
+}
