--- a/src/pages/DocAge/DocAge.css
+++ b/src/pages/DocAge/DocAge.css
@@ -16,8 +16,8 @@
 
 .age-photo {
 
-    width: 630px;
-    height: 500px;
+    width: 460px;
+    height: 350px;
     background-image: url('../../assets/images/fotografia/documental/la\ mirada\ de\ la\ edad.png');
     background-size: cover;
     margin: 10px;
