--- a/src/pages/DocMusic/DocMusic.css
+++ b/src/pages/DocMusic/DocMusic.css
@@ -16,8 +16,8 @@
 
 .music-photo {
 
-    width: 630px;
-    height: 500px;
+    width: 460px;
+    height: 350px;
     background-image: url('../../assets/images/fotografia/documental/musica\ de\ ciegos.png');
     background-size: cover;
     margin: 10px;
