--- a/src/pages/DocMusician/DocMusician.css
+++ b/src/pages/DocMusician/DocMusician.css
@@ -15,8 +15,8 @@
 
 .musician-photo {
 
-    width: 630px;
-    height: 500px;
+    width: 460px;
+    height: 350px;
     background-image: url('../../assets/images/fotografia/documental/Captura\ de\ pantalla\ \(149\)\ 1.png');
     background-size: cover;
     margin: 10px;
